--- a/templates/intranet/group_manager/manage.html
+++ b/templates/intranet/group_manager/manage.html
@@ -5,6 +5,12 @@
 <header class="page-header">
 <h1>{{group}}</h1>
 </header>
+{% if saved %}
+<div class="alert alert-success">
+  Changes saved!
+</div>
+{% endif %}
+
 <p>
 <a href="/intranet/group/manage/{{group.id}}/add" class="btn">Add members</a>
 </p>
