change sig page

--- a/templates/banks/main.html
+++ b/templates/banks/main.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 <header class="page-header">
-<h1>Banks</h1>
+<h1>Banks of the Boneyard</h1>
 </header>
+<p>
+	Banks of the boneyard is the ACM monthy newsletter. More information coming soon. For questions email <a href="mailto:boneyard@acm.uiuc.edu">boneyard@acm.uiuc.edu</a>.
+</p>
 {% endblock %}
