--- a/templates/contact.html
+++ b/templates/contact.html
@@ -53,7 +53,7 @@
      
      <p><strong>Banks Editor</strong><br>
         Reed La Botz<br>
-        <a href="mailto:boneyard@uiuc.edu">boneyard@uiuc.edu</a>
+        <a href="mailto:boneyard@acm.uiuc.edu">boneyard@uiuc.edu</a>
       </p>
 
   </div>
