--- a/templates/about/committees.html
+++ b/templates/about/committees.html
@@ -3,14 +3,11 @@
 <header class="page-header">
 <h1>ACM Committees</h1>
 </header>
-<p>In addition to SIGs, ACM has a number of committees that work to support the SIGs and ACM as a whole. If you are interested in getting involved with one of these groups, please contact <a hre="mailto:acm@uiuc.edu">acm@uiuc.edu</a>.</p>
+{% for c in committees %}
 <section>
-<h2>Corporate Liaisons</h2>
-<p>The corporate committee is responsible for maintaining ACM's contacts with our corporate partners. This is a tough job, but it's a great way to get your foot in the door with some of the industry's greatest companies.</p>
+<h2>{{c.name}}</h2>
+<p>{{c.description}}</p>
+<p><a href="/about/committees/{{c.id}}">More info</a></p>
 </section>
-
-<section>
-<h2>NT and UNIX Admins</h2>
-<p>The ACM Cluster could always use more sysadmin-types to help keep things in line. Even if your skills are lacking, we can help you get started.</p>
-</section>
+{% endfor %}
 {% endblock %}
