event manaer works

--- a/templates/intranet/base.html
+++ b/templates/intranet/base.html
@@ -32,8 +32,8 @@
           <li{% if page == 'jobs' %} class='active'{% endif %}>
             <a href="/intranet/jobs">Jobs Manager</a>
           </li> 
-          <li{% if page == 'calendar' %} class='active'{% endif %}>
-            <a href="/intranet/events">Event Manager</a>
+          <li{% if page == 'event' %} class='active'{% endif %}>
+            <a href="/intranet/event">Event Manager</a>
           </li>
           <li{% if page == 'banks' %} class='active'{% endif %}>
             <a href="/intranet/banks">Banks Manager</a>
