--- a/templates/intranet/group_manager/main.html
+++ b/templates/intranet/group_manager/main.html
@@ -20,7 +20,7 @@
   <tbody>
   {% for g in groups %}
   <tr>
-  	<td><a href="/intranet/group/edit/{{g.id}}"><i class="icon-edit"></i> Edit</a>
+  	<td><a href="/intranet/group/edit/{{g.id}}"><i class="icon-edit"></i> Edit</a></td>
     <td>{{g.get_type_display}}</td>
     <td>{{g.name}}</td>
     <td>{{g.status}}</td>
