--- a/templates/main.html
+++ b/templates/main.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-
+<h1>{{user}}</h1>
 <div id="myCarousel" class="carousel">
    <!-- Carousel items -->
      <div class="carousel-inner">
