fix member search

--- a/templates/intranet/member_manager/search.html
+++ b/templates/intranet/member_manager/search.html
@@ -22,7 +22,7 @@
   <tbody>
   {% for m in members %}
   <tr>
-    <td>{{m.netid}}</td>
+    <td>{{m.username}}</td>
     <td>{{m.first_name}}</td>
     <td>{{m.last_name}}</td>
     <td>{{m.joined}}</td>
