--- a/static/css/main.css
+++ b/static/css/main.css
@@ -66,6 +66,26 @@ a.brand em{
    margin-top:-12px;
 }
 
+.right_nav{
+   margin-bottom:0px;
+   margin-right:15px;
+}
+
+.nav_name{
+   padding-top: 8px;
+   padding-bottom: 8px;
+   margin-top: 2px;
+   margin-bottom: 2px;
+   -webkit-border-radius: 5px;
+   -moz-border-radius: 5px;
+   border-radius: 5px;
+   padding-right: 12px;
+   padding-left: 12px;
+   margin-right: 2px;
+   line-height: 14px;
+   display:block;
+}
+
 .main{
    background:#ffffff;
    padding:20px;
