--- a/templates/base.html
+++ b/templates/base.html
@@ -40,11 +40,11 @@
           <li{% if section == 'contact' %} class='active'{% endif %}><a href="/contact">Contact</a></li>
           <li{% if section == 'intranet' %} class='active'{% endif %}><a href="/intranet">Intranet</a></li>
           <ul class="nav nav-pills pull-right right_nav">
-            {% if user.is_authenticated %}
+            {% if user.is_anonymous %}
+            <li><a href="/login">Login</a></li>
+            {% else %}
             <li class="nav_name">Hi, {{user.first_name}}</li>
             <li><a href="/logout">Logout</a></li>
-            {% else %}
-            <li><a href="/login">Login</a></li>
             {% endif %}
           </ul>
         </ul>
