import user script

--- a/templates/intranet/member_manager/search.html
+++ b/templates/intranet/member_manager/search.html
@@ -25,7 +25,7 @@
     <td>{{m.username}}</td>
     <td>{{m.first_name}}</td>
     <td>{{m.last_name}}</td>
-    <td>{{m.joined}}</td>
+    <td>{{m.date_joined}}</td>
     <td>{{m.left_uiuc}}</td>
     <td>{{m.get_status_display}}</td>
   </tr>
