--- a/templates/intranet/main.html
+++ b/templates/intranet/main.html
@@ -1,7 +1,7 @@
 {% extends "intranet/base.html" %}
 {% block intranet_content %}
 <header class="page-header">
-<h1>Intranet</h1>
+<h1>Welcome, {{user.full_name}}</h1>
 </header>
 
 {% endblock %}
