--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
           <li{% if section == 'calendar' %} class='active'{% endif %}><a href="/calendar">Calendar</a></li>
           <li{% if section == 'sigs' %} class='active'{% endif %}><a href="/sigs">SIGs</a></li>
           <li{% if section == 'banks' %} class='active'{% endif %}><a href="/banks">Banks</a></li>
-          <li><a href="http://www.acm.uiuc.edu/conference/">Conference</a></li>
+          <li{% if section == 'conference' %} class='active'{% endif %}><a href="/conference">Conference</a></li>
           <li{% if section == 'contact' %} class='active'{% endif %}><a href="/contact">Contact</a></li>
           <li{% if section == 'intranet' %} class='active'{% endif %}><a href="/intranet">Intranet</a></li>
           <ul class="nav nav-pills pull-right right_nav">
