--- a/liquid/templates/intranet/member_database/main.html
+++ b/liquid/templates/intranet/member_database/main.html
@@ -9,7 +9,7 @@
 <p>
 <a href="/intranet/members/search">Browse all members</a> 
 </p>
-{% if user.is_top_4 %}
+{% if user.is_top4 %}
 <p>
 <a href="/intranet/members/new">Create new members</a> 
 </p>
