--- a/liquid/templates/base.html
+++ b/liquid/templates/base.html
@@ -8,6 +8,8 @@
     <!-- Le styles -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/main.css" rel="stylesheet">
+    {% block top_styles %}
+    {% endblock %}
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -54,6 +56,11 @@
     
 
     <div class="container main">
+        {% if messages %}
+          {% for message in messages %}
+            <div class="alert{% if message.tags %} alert-{{ message.tags }}{% endif %}">{{ message }}  </div>
+          {% endfor %}
+        {% endif %}
         {% block content %}
         {% endblock %}
     </div> <!-- /container -->
@@ -67,7 +74,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/static/js/jquery-1.7.1.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
-
-
+    {% block bottom_scripts %}
+    {% endblock %}
   </body>
 </html>
