--- a/liquid/templates/conf.html
+++ b/liquid/templates/conf.html
@@ -12,5 +12,5 @@
 <p>
   ACM could not host Reflections | Projections without the generous support of our sponsors. Their donations fund all the events and help keep student fees low.
 </p>
-<p>For more information visit the website: <a href="http://www.acm.uiuc.edu/conference/2012/">http://www.acm.uiuc.edu/conference/2012/</a>.</p>
+<p>For more information visit the website: <a href="http://www.acm.uiuc.edu/conference/">http://www.acm.uiuc.edu/conference/</a>.</p>
 {% endblock %}
