--- a/liquid/templates/base.html
+++ b/liquid/templates/base.html
@@ -38,7 +38,7 @@
           <li{% if section == 'calendar' %} class='active'{% endif %}><a href="/calendar">Calendar</a></li>
           <li{% if section == 'sigs' %} class='active'{% endif %}><a href="/sigs">SIGs</a></li>
           <li{% if section == 'banks' %} class='active'{% endif %}><a href="/banks">Banks</a></li>
-          <li{% if section == 'conference' %} class='active'{% endif %}><a href="/conference">Conference</a></li>
+          <li{% if section == 'conference' %} class='active'{% endif %}><a href="/conf">Conference</a></li>
           <li{% if section == 'contact' %} class='active'{% endif %}><a href="/contact">Contact</a></li>
           <li{% if section == 'intranet' %} class='active'{% endif %}><a href="/intranet">Intranet</a></li>
           <ul class="nav nav-pills pull-right right_nav">
