--- a/liquid/templates/main.html
+++ b/liquid/templates/main.html
@@ -20,7 +20,7 @@
           <h2>Events:</h2>
           {% for e in events %}
           {% ifchanged %}<h3>{{ e.starttime|date:"F j Y" }}</h3>{% endifchanged %}
-          <p>{{e.starttime|date:"f:i A"}}: {{e.name}}</p>
+          <p>{{e.starttime|date:"f:i A"}}: <a href="{% url event_details e.id %}">{{e.name}}</a></p>
           {% endfor %}
           <p><a href="/calendar">More</a></p>
         </div>
