--- a/liquid/templates/cal/main.html
+++ b/liquid/templates/cal/main.html
@@ -3,8 +3,12 @@
 <header class="page-header">
 <h1>Calendar</h1>
 </header>
+{% if events %}
 {% for e in events %}
  {% ifchanged %}<h2>{{ e.starttime|date:"F j Y" }}</h2>{% endifchanged %}
  <p>{{e.starttime|date:"f:i A"}}: <a href="{% url event_details e.id %}">{{e.name}}</a></p>
- {% endfor %}
+{% endfor %}
+{% else %}
+<p>No events</p>
+{% endif %}
 {% endblock %}
