--- a/liquid/templates/main.html
+++ b/liquid/templates/main.html
@@ -18,10 +18,14 @@
       <div class="span4">
         <div class="well">
           <h2>Events:</h2>
+          {% if events %}
           {% for e in events %}
           {% ifchanged %}<h3>{{ e.starttime|date:"F j Y" }}</h3>{% endifchanged %}
           <p>{{e.starttime|date:"f:i A"}}: <a href="{% url event_details e.id %}">{{e.name}}</a></p>
           {% endfor %}
+          {% else %}
+          <p>No events</p>
+          {% endif %}
           <p><a href="/calendar">More</a></p>
         </div>
       </div>
