--- a/liquid/templates/main.html
+++ b/liquid/templates/main.html
@@ -1,35 +1,64 @@
 {% extends "base.html" %}
 {% block content %}
-<div id="myCarousel" class="carousel">
-   <!-- Carousel items -->
-   <div class="row">
-     <div class="span8">
-       <div class="carousel-inner">
-         <div class="active item">
-           <h2>Welcome to ACM@UIUC!</h2>
-           <p>The Association for Computing Machinery (ACM) is a student group consisting of a variety of people with diverse backgrounds who share a common interest in computers.</p>
-           <p><a class="btn btn-primary btn-large" href="/about">Learn more &raquo;</a></p>
-         </div>
-       </div>
-       <!-- Carousel nav -->
-       <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-       <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
-      </div>
-      <div class="span4">
-        <div class="well">
-          <h2>Events:</h2>
-          {% if events %}
-          {% for e in events %}
-          {% ifchanged %}<h3>{{ e.starttime|date:"F j Y" }}</h3>{% endifchanged %}
-          <p>{{e.starttime|date:"f:i A"}}: <a href="{% url event_details e.id %}">{{e.name}}</a></p>
-          {% endfor %}
-          {% else %}
-          <p>No events</p>
-          {% endif %}
-          <p><a href="/calendar">More</a></p>
+<div class="row">
+   <div class="span8">
+      <div id="myCarousel" class="carousel">
+         <!-- Carousel items -->
+         <div class="carousel-inner">
+            <div class="item active">
+               <img src="static/img/cover/acm.jpg" alt="">
+               <div class="carousel-caption">
+                  <h4>Welcome to ACM@UICU</h4>
+                  <p>The Association for Computing Machinery (ACM) is a student group consisting of a variety of people with diverse backgrounds who share a common interest in computers.</p>
+               </div>
+            </div>
+            <div class="item">
+               <img src="static/img/cover/tachi.jpg" alt="">
+               <div class="carousel-caption">
+                  <h4>Tachi at Engineering Open House</h4>
+                  <p>This award wining touch table has been a sight to see in Siebel at the past several Open Houses.</p>
+               </div>
+            </div>
+            <div class="item">
+               <img src="static/img/cover/fun.jpg" alt="">
+               <div class="carousel-caption">
+                  <h4>Go Fly a Kite</h4>
+                  <p>On a sunny Friday afternoon sometime we venture out of the walls of Siebel.</p>
+               </div>
+            </div>
+            <div class="item">
+               <img src="static/img/cover/fun2.jpg" alt="">
+               <div class="carousel-caption">
+                  <h4>Passing</h4>
+                  <p>After a long semester of work, a nap in the sun.</p>
+               </div>
+            </div>
+            <div class="item">
+               <img src="static/img/cover/fun3.jpg" alt="">
+               <div class="carousel-caption">
+                  <h4>Caroline</h4>
+                  <p>'nuff said.</p>
+               </div>
+            </div>
         </div>
+        <!-- Carousel nav -->
+        <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+        <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
       </div>
-  </div>
+   </div>
+   <div class="span4">
+      <h2>Events:</h2>
+      <hr>
+      {% if events %}
+      {% for e in events %}
+      {% ifchanged %}<h3>{{ e.starttime|date:"F j Y" }}</h3>{% endifchanged %}
+      <p>{{e.starttime|date:"f:i A"}}: <a href="{% url event_details e.id %}">{{e.name}}</a></p>
+      {% endfor %}
+      {% else %}
+      <p>No events</p>
+      {% endif %}
+      <p><a href="/calendar">More</a></p>
+   </div>
 </div>
 <hr>
 <!-- Example row of columns -->
