--- a/liquid/templates/main.html
+++ b/liquid/templates/main.html
@@ -57,7 +57,7 @@
       {% else %}
       <p>No events</p>
       {% endif %}
-      <p><a href="/calendar">More</a></p>
+      <p><a href="/calendar">More >></a></p>
    </div>
 </div>
 <hr>
