--- a/liquid/templates/about/committees.html
+++ b/liquid/templates/about/committees.html
@@ -7,7 +7,8 @@
 <section>
 <h2>{{c.name}}</h2>
 <p>{{c.description}}</p>
-<p><a href="/about/committees/{{c.id}}">More info</a></p>
+<p>Chairs: {{c.chairs}}</p>
+<p><a href="/about/committees/{{c.id}}">More info >></a></p>
 </section>
 {% endfor %}
 {% endblock %}
