--- a/liquid/templates/cal/main.html
+++ b/liquid/templates/cal/main.html
@@ -6,7 +6,7 @@
 {% if events %}
 {% for e in events %}
  {% ifchanged %}<h2>{{ e.starttime|date:"F j Y" }}</h2>{% endifchanged %}
- <p>{{e.starttime|date:"f:i A"}}: <a href="{% url event_details e.id %}">{{e.name}}</a></p>
+ <p>{{e.starttime|date:"g:i A"}}: <a href="{% url event_details e.id %}">{{e.name}}</a></p>
 {% endfor %}
 {% else %}
 <p>No events</p>
