--- a/liquid/templates/main.html
+++ b/liquid/templates/main.html
@@ -52,7 +52,7 @@
       {% if events %}
       {% for e in events %}
       {% ifchanged %}<h3>{{ e.starttime|date:"F j Y" }}</h3>{% endifchanged %}
-      <p>{{e.starttime|date:"f:i A"}}: <a href="{% url event_details e.id %}">{{e.name}}</a></p>
+      <p>{{e.starttime|date:"g:i A"}}: <a href="{% url event_details e.id %}">{{e.name}}</a></p>
       {% endfor %}
       {% else %}
       <p>No events</p>
