move corporate to its own section

--- a/liquid/templates/base.html
+++ b/liquid/templates/base.html
@@ -39,6 +39,7 @@
           <li{% if section == 'sigs' %} class='active'{% endif %}><a href="/sigs">SIGs</a></li>
           <li{% if section == 'banks' %} class='active'{% endif %}><a href="/banks">Banks</a></li>
           <li{% if section == 'conference' %} class='active'{% endif %}><a href="/conf">Conference</a></li>
+          <li{% if section == 'corporate' %} class='active'{% endif %}><a href="/corporate">Corporate</a></li>
           <li{% if section == 'contact' %} class='active'{% endif %}><a href="/contact">Contact</a></li>
           <li{% if section == 'intranet' %} class='active'{% endif %}><a href="/intranet">Intranet</a></li>
           <ul class="nav nav-pills pull-right right_nav">
