--- a/liquid/templates/corporate/main.html
+++ b/liquid/templates/corporate/main.html
@@ -1,5 +1,5 @@
-{% extends "about/base.html" %}
-{% block about_content %}
+{% extends "base.html" %}
+{% block content %}
 <header class="page-header">
 <h1>Corporate Connection</h1>
 </header>
@@ -9,7 +9,7 @@
 <h2>Post a job ad</h2>
 <p>Your advertisement will automatically be included in the next issue of ACM's weekly jobs e-mail newsletter. This newsletter reaches over 600 top undergraduate and graduate students in Computer Science, Electrical and Computer Engineering, and related fields.</p>
 <ul>
-  <li><a href="/about/corporate/job">Create new job ad</a></li>
+  <li><a href="/corporate/job">Create new job ad</a></li>
   <li><a href="http://www.acm.uiuc.edu/archives/jobs-l/">Jobs mailing list archive</a></i>
 </ul>
 </section>
