fix typo on front page

--- a/liquid/templates/main.html
+++ b/liquid/templates/main.html
@@ -8,7 +8,7 @@
             <div class="item active">
                <img src="static/img/cover/acm.jpg" alt="">
                <div class="carousel-caption">
-                  <h4>Welcome to ACM@UICU</h4>
+                  <h4>Welcome to ACM@UIUC</h4>
                   <p>The Association for Computing Machinery (ACM) is a student group consisting of a variety of people with diverse backgrounds who share a common interest in computers.</p>
                </div>
             </div>
