add chroma in intranet menu

--- a/liquid/templates/intranet/base.html
+++ b/liquid/templates/intranet/base.html
@@ -24,6 +24,9 @@
             </li>
             
           <li class="nav-header">Intranet</li>
+            <li{% if page == 'chroma' %} class='active'{% endif %}>
+               <a href="/intranet/chroma">Chroma Lights</a>
+            </li>
             <li{% if page == 'members' %} class='active'{% endif %}>
               <a href="/intranet/members">Member Database</a>
             </li> 
