fix chroma view

--- a/liquid/templates/intranet/chroma/main.html
+++ b/liquid/templates/intranet/chroma/main.html
@@ -29,8 +29,7 @@
    </table>
 {% endblock %}
 {% block bottom_scripts %}
-<script src="static/js/bootstrap-alert.js"></script>
-<script src="static/js/jquery.quicksearch.js"></script>
+<script src="/static/js/jquery.quicksearch.js"></script>
 <script>
 $(document).ready(function(){
    $('input#id_search').quicksearch('table#list tbody tr');
