Cleanup, and adding address to footer

--- a/liquid/templates/contact.html
+++ b/liquid/templates/contact.html
@@ -12,7 +12,7 @@
     </p>
     
     <p><strong>Vice Chair</strong><br>
-       Sean Nicolay<br
+        Sean Nicolay<br>
        <a href="mailto:vice-chair@acm.uiuc.edu">vice-chair@acm.uiuc.edu</a>
     </p>
     
