--- a/liquid/templates/base.html
+++ b/liquid/templates/base.html
@@ -67,7 +67,7 @@
     </div> <!-- /container -->
     
     <footer class="container">
-      © ACM@UIUC | <a href="mailto:webmaster@acm.uiuc.edu">webmaster@acm.uiuc.edu</a> | office phone (217) 333-5828 | email <a href="acm@uiuc.edu">acm@uiuc.edu</a>
+        ACM@UIUC | <a href="tel:1-217-333-5828">(217)-333-5828</a> | <a href="acm@uiuc.edu">acm@uiuc.edu</a> | Ste. 1104 Thomas M. Siebel for Computer Science, 201 N. Goodwin Ave. Urbana, IL 61801
     </footer>
 
     <!-- Le javascript
