add balance to intranet

--- a/liquid/templates/intranet/main.html
+++ b/liquid/templates/intranet/main.html
@@ -22,6 +22,9 @@
          </ul>
       </p>
    </div>
+   <div class="span3">
+      <p>Balance: ${{ user.get_vending.balance }}</p>
+   </div>
 </div>
 
 {% endblock %}
