--- a/liquid/templates/registration/login.html
+++ b/liquid/templates/registration/login.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% load bootstrap %}
 {% block content %}
-<form class="well" method="post">
+<div class="row">
+  <div class="span4">
+  <form class="well" method="post">
   {% csrf_token %}
   {{ form|bootstrap }}
   <div class="control-group">
@@ -10,5 +12,16 @@
       <button type="submit" class="btn btn-primary">Login</button>
     </div>
   </div>
-</form>
+  </form>
+</div>
+<div class="span6">
+  <p>
+  Your username is your netid. Your password is your LDAP password. 
+  Don't have an LDAP password? Run this from a Linux cluster machine: 
+  /afs/acm.uiuc.edu/admin/scripts/set-ldap-password 
+  Don't have a cluster account? Email <a href="mailto:admin@acm.uiuc.edu">admin@acm.uiuc.edu</a>
+
+  </p>
+</div>
+</div>
 {% endblock %}
