--- a/liquid/templates/sigs/details.html
+++ b/liquid/templates/sigs/details.html
@@ -6,7 +6,7 @@
 <p><img src="{{s.logo}}" align="right">{{s.description}}</p>
 <p>Chairs: {{s.chairs}}</p>
 <p>Email: <a href="mailto:{{s.mailing_list}}">{{s.mailing_list}}</a></p>
-<p>Website: <a href="s.url}}">{{s.url}}</a></p>
+<p>Website: <a href="{{s.url}}">{{s.url}}</a></p>
 <p>
 	Meetings: {{s.get_meeting_day_display}} {{s.meeting_time}}, {{s.meeting_location}}
 </p>
