use rp logo for conf page

--- a/liquid/templates/conf.html
+++ b/liquid/templates/conf.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-<header class="page-header">
-<h1>Reflections | Projections</h1>
+<header class="page-header" style="text-align:center;">
+<img src="http://www.acm.uiuc.edu/conference/2012/img/logo.png" />
 </header>
 <p>
   Seventeen years ago, the student chapter of the Association for Computing Machinery at the University of Illinois (ACM@UIUC) held its first computing conference. 150 students from across the midwest attended the event, which was supported by fourteen corporations.
