First draft at an about page revision for #14

--- a/liquid/templates/about/main.html
+++ b/liquid/templates/about/main.html
@@ -3,20 +3,52 @@
 <header class="page-header">
 <h1>About ACM@UIUC</h1>
 </header>
+
 <section>
 <h2>General Introduction</h2>
 
-<p>ACM@UIUC is a 501(c)(3) non-for-profit student chapter of the Association for Computing Machinery, a professional society dedicated to advancing human capabilities through information technology. Founded in 1947, the Association for Computing Machinery (ACM) is the largest and oldest international scientific and educational computer society in the industry today. Organized only a year after the unveiling of ENIAC, the first general purpose electronic computer, ACM was established by mathematicians and electrical engineers to advance the science and application of information technology. John Mauchly, co-inventor of the ENIAC, was one of ACM's founders. The student chapter at the University of Illinois has been active since 1965 and we have records dating back to the days when former CS department head Duncan Lawrie was an undergrad.</p>
+<p>
+ACM@UIUC is a 501(c)(3) non-for-profit student chapter of the Association for
+Computing Machinery, a professional society dedicated to advancing human
+capabilities through information technology. Founded in 1947, the Association
+for Computing Machinery (ACM) is the largest and oldest international scientific
+and educational computer society in the industry today. Organized only a year
+after the unveiling of ENIAC, the first general purpose electronic computer, ACM
+was established by mathematicians and electrical engineers to advance the The
+student chapter at the University of Illinois was initially the Department of
+Computer Science's undergraduate student organization starting in 1965 and was
+officially formed as a student chapter of the ACM on November 1, 1967.
+</p>
 
-<p>ACM@UIUC is a group of dedicated people who are interested in exploring the possibilities of computers and learning more about how to use and develop them. A closer look reveals that ACM@UIUC is made up of several interacting components: Special Interest Groups, Exec Meetings, General Meetings and social activities. Of course this structure is just a way of looking at the organization. There is significant overlap between these three areas. All ACM activities are open to the entire University community, regardless of computer experience and background.</p>
+<p>
+ACM@UIUC is a group of dedicated people who are interested in exploring the
+possibilities of computers and learning more about how to use and develop them.
+ACM is divided into Special Interest Groups, or SIGs, which focus on specific
+interest areas in computer science and computing. Each SIG holds its own
+meetings. Each SIG is responsible for orginizing its own activities and
+determining its own purpose. Several SIGs are project based, with the majority
+of their activities dedicated to computing projects in their area of interest,
+often presented at Engineering Open House. Some SIGs run workshops and tech
+talks to discuss topics related to their interest group. To find out more about
+our SIGs, visit the <a href="/sigs">SIG page</a> and attend a meeting.
+</p>
 
-<p>The Special Interest Groups (SIGs) are a unique feature of our ACM student chapter which we borrowed from the national ACM. A SIG is an organization like ACM with a smaller scope. We have approximately 20 active SIGs in ACM@UIUC, each with a unique focus and culture. Some of the SIGs are project based, working on projects for Engineering Open House or just for the sake of experience. Others present workshops to increase campus awareness of computers and the resources the University offers. Each SIG has between 5 and 30 members, and most meet on a weekly basis. Over the past few years, SIGs have been the biggest and most important part of ACM, because they give people hands-on experience with computers and leadership.</p>
+<p>
+ACM also hosts several general events, which are listed on our <a href="/calendar">
+calendar page</a>. These events include social activities (such as picnics, swim
+nights, activity weeks, game nights), outreach activities (such as ACM Open House,
+Student Lecture Series, and educational activities for high school and middle
+school students), and the annual Reflections | Projections conference.  All ACM
+activities and SIG meetings are open to the entire University community,
+regardless of computer experience and background.
+</p>
 
-<p>ACM@UIUC holds an Exec meeting every Monday, at which the direction on ACM is defined. Everyone is welcome to attend and make suggestions for new ACM groups or events. Decisions about such events and other important ACM matters are also made at these meetings.</p>
-
-<p>While some may think ACM@UIUC is all work and no play, ACM@UIUC dedicates as much time to social activities as any student organization on campus. ACM has to be fun or we wouldn't be doing it. Social events include: biannual picnics, canoe trips, paint balling, wallyball and many other typical student pastimes: roller blading, song writing, frisbee, and of course parties.</p>
-
-<p>Overall, ACM@UIUC is a large organization focused on individual excellence. The ACM attempts to promote personal success through group projects and present a challenge to members unlike those offered in their academic work.</p>
+<p>
+ACM@UIUC holds an Exec meeting most Mondays, at which the direction on ACM is
+defined. Everyone is welcome to attend and make suggestions for new ACM groups
+or events. Decisions about such events and other important ACM matters are also
+made at these meetings.
+</p>
 </section>
 
 <section>
