Fix typo as pointed out by @rjmarsan

--- a/liquid/templates/main.html
+++ b/liquid/templates/main.html
@@ -15,7 +15,7 @@
             <div class="item">
                <img src="static/img/cover/tachi.jpg" alt="">
                <div class="carousel-caption">
-                  <h4>Tachi at Engineering Open House</h4>
+                  <h4>Tacchi at Engineering Open House</h4>
                   <p>This award wining touch table has been a sight to see in Siebel at the past several Open Houses.</p>
                </div>
             </div>
