Remove hanging tag

--- a/liquid/templates/intranet/event_manager/form.html
+++ b/liquid/templates/intranet/event_manager/form.html
@@ -1,7 +1,7 @@
 {% extends "intranet/base.html" %}
 {% load bootstrap %}
 {% block top_styles %}
-<link href="/static/css/datepicker.css" rel="stylesheet">>
+<link href="/static/css/datepicker.css" rel="stylesheet">
 {% endblock %}
 {% block intranet_content %}
 <header class="page-header">
