resume working almost all the way

--- a/liquid/templates/intranet/base.html
+++ b/liquid/templates/intranet/base.html
@@ -39,6 +39,9 @@
             <li{% if page == 'jobs' %} class='active'{% endif %}>
               <a href="/intranet/jobs">Jobs Manager</a>
             </li> 
+            <li{% if page == 'resume' %} class='active'{% endif %}>
+              <a href="/intranet/resume">Resume Manager</a>
+            </li> 
         </ul>
       </div><!--/.well -->
     </div>
