Fix typo on 500 page.

--- a/liquid/templates/500.html
+++ b/liquid/templates/500.html
@@ -3,5 +3,5 @@
 
 {% block content %}
 <h3>We're sorry!</h3>
-<p>It seems like we messed something up.  We wil fix this as soon as we can.  Thanks!</p>
+<p>It seems like we messed something up.  We will fix this as soon as we can.  Thanks!</p>
 {% endblock %}
